// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl list credentials should work (default formatting) 1`] = `
"id                                    name                          type     data  created            
3931f596-c07b-4b1a-b59c-73da9680b5c4  CI test credential            generic  -     12/29/2021, 9:59 PM
1c4552f1-6555-4189-a4e8-5b48597f59df  Savings                       generic  -     12/29/2021, 9:34 PM
del-me                                I refuse to go away...        generic  -     12/29/2021, 9:01 PM
secret-test-cred                      Super Secret Test Credential  generic  -     12/29/2021, 8:57 PM
"
`;

exports[`refactrctl list credentials should work 1`] = `
"id                                    name                          type     data  created            
3931f596-c07b-4b1a-b59c-73da9680b5c4  CI test credential            generic  -     12/29/2021, 9:59 PM
1c4552f1-6555-4189-a4e8-5b48597f59df  Savings                       generic  -     12/29/2021, 9:34 PM
del-me                                I refuse to go away...        generic  -     12/29/2021, 9:01 PM
secret-test-cred                      Super Secret Test Credential  generic  -     12/29/2021, 8:57 PM
"
`;

exports[`refactrctl list credentials should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccda5c8997cf6f0574286e\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T21:59:56.721Z\\",
        \\"id\\": \\"3931f596-c07b-4b1a-b59c-73da9680b5c4\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"61ccd4588997cf1f1d74285d\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T21:34:16.234Z\\",
        \\"id\\": \\"1c4552f1-6555-4189-a4e8-5b48597f59df\\",
        \\"name\\": \\"Savings\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"61cccca78997cf024c74285a\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T21:01:27.082Z\\",
        \\"name\\": \\"I refuse to go away...\\",
        \\"id\\": \\"del-me\\",
        \\"type\\": \\"generic\\",
        \\"modified\\": \\"2021-12-29T21:05:49.118Z\\"
    },
    {
        \\"_id\\": \\"61cccbc58997cf7030742858\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:57:41.754Z\\",
        \\"name\\": \\"Super Secret Test Credential\\",
        \\"id\\": \\"secret-test-cred\\",
        \\"type\\": \\"generic\\"
    }
]
"
`;

exports[`refactrctl list credentials should work 3`] = `
"-
    _id: 61ccda5c8997cf6f0574286e
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T21:59:56.721Z'
    id: 3931f596-c07b-4b1a-b59c-73da9680b5c4
    name: CI test credential
    type: generic
-
    _id: 61ccd4588997cf1f1d74285d
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T21:34:16.234Z'
    id: 1c4552f1-6555-4189-a4e8-5b48597f59df
    name: Savings
    type: generic
-
    _id: 61cccca78997cf024c74285a
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T21:01:27.082Z'
    name: I refuse to go away...
    id: del-me
    type: generic
    modified: '2021-12-29T21:05:49.118Z'
-
    _id: 61cccbc58997cf7030742858
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:57:41.754Z'
    name: Super Secret Test Credential
    id: secret-test-cred
    type: generic

"
`;

exports[`refactrctl list credentials throws on missing arguments 1`] = `
"refactrctl credentials [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of project containing the credentials  [string] [required]
      --type  [string] [choices: \\"api_token\\", \\"aws_access_key\\", \\"azure_service_principal\\", \\"bearer_token\\", \\"generic\\", \\"ssh_key\\", \\"username_password\\", \\"vault_app_role\\", \\"google_service_account\\"]
      --sort        Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list jobs should work (default formatting) 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccca11d42b9be6898365e0\\",
        \\"webhook\\": {
            \\"ip_whitelist\\": []
        },
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:50:25.094Z\\",
        \\"disable_on_failure\\": false,
        \\"enabled\\": true,
        \\"pipeline_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"pipeline_revision_id\\": \\"61ccc95a8997cfeb71742855\\",
        \\"name\\": \\"How Do We Know It Works?\\",
        \\"trigger_type\\": \\"manual\\",
        \\"suppress_vars\\": false,
        \\"suppress_outputs\\": false,
        \\"suppress_events\\": false,
        \\"last_run\\": \\"2021-12-30T17:49:59.343Z\\",
        \\"last_status\\": \\"Succeeded\\"
    }
]
"
`;

exports[`refactrctl list jobs should work 3`] = `
"-
    _id: 61ccca11d42b9be6898365e0
    webhook:
        ip_whitelist: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:50:25.094Z'
    disable_on_failure: false
    enabled: true
    pipeline_id: 61ccc379d42b9b0f518365db
    pipeline_revision_id: 61ccc95a8997cfeb71742855
    name: How Do We Know It Works?
    trigger_type: manual
    suppress_vars: false
    suppress_outputs: false
    suppress_events: false
    last_run: '2021-12-30T17:49:59.343Z'
    last_status: Succeeded

"
`;

exports[`refactrctl list jobs throws on missing arguments 1`] = `
"refactrctl jobs [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the jobs  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl list organizations should work (default formatting) 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 2`] = `
"[
    {
        \\"_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"address\\": \\"123 Main St.\\",
        \\"city\\": \\"New York\\",
        \\"state\\": \\"NY\\",
        \\"zip\\": \\"12345\\",
        \\"contact_name\\": \\"Victoria Drake\\",
        \\"contact_email\\": \\"victoria.drake@sophos.com\\",
        \\"name\\": \\"CLI e2e\\",
        \\"created\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"modified\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"plan\\": \\"starter\\",
        \\"plan_quotas\\": {
            \\"total_credits\\": 25,
            \\"project_count\\": 10,
            \\"user_count\\": 15,
            \\"agent_count\\": 10,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        }
    },
    {
        \\"_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"name\\": \\"Refactr\\",
        \\"created\\": \\"2020-10-10T07:07:53.294Z\\",
        \\"modified\\": \\"2020-11-01T23:15:21.605Z\\",
        \\"contact_email\\": \\"anthony@refactr.it\\",
        \\"contact_name\\": \\"Anthony Rowlands\\",
        \\"city\\": \\"Seattle\\",
        \\"state\\": \\"WA\\",
        \\"zip\\": \\"12345\\",
        \\"plan\\": \\"admin\\",
        \\"plan_quotas\\": {
            \\"project_count\\": -1,
            \\"user_count\\": -1,
            \\"agent_count\\": -1,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        },
        \\"address\\": \\"123 Main St.\\",
        \\"image_id\\": \\"6036851a545c5e5481871c88\\",
        \\"capabilities\\": {
            \\"publish_catalogs\\": true
        },
        \\"public\\": true
    }
]
"
`;

exports[`refactrctl list organizations should work 3`] = `
"-
    _id: 61cc93942529b6ec9681e4e2
    address: 123 Main St.
    city: New York
    state: NY
    zip: '12345'
    contact_name: Victoria Drake
    contact_email: victoria.drake@sophos.com
    name: CLI e2e
    created: '2021-12-29T16:57:56.369Z'
    modified: '2021-12-29T16:57:56.369Z'
    plan: starter
    plan_quotas:
        total_credits: 25
        project_count: 10
        user_count: 15
        agent_count: 10
        run_minutes: -1
        support_hours: 0
-
    _id: 5f9f2d08e2f1bb2436e6f5b0
    name: Refactr
    created: '2020-10-10T07:07:53.294Z'
    modified: '2020-11-01T23:15:21.605Z'
    contact_email: anthony@refactr.it
    contact_name: Anthony Rowlands
    city: Seattle
    state: WA
    zip: '12345'
    plan: admin
    plan_quotas:
        project_count: -1
        user_count: -1
        agent_count: -1
        run_minutes: -1
        support_hours: 0
    address: 123 Main St.
    image_id: 6036851a545c5e5481871c88
    capabilities:
        publish_catalogs: true
    public: true

"
`;

exports[`refactrctl list pipeline-revisions throws on missing arguments 1`] = `
"refactrctl pipeline-revisions [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the project containing the pipeline revision  [string] [required]
      --pipeline-id  ID of the pipeline containing the pipeline revision  [string] [required]
      --limit  [number]
      --offset  [number]

Missing required arguments: project-id, pipeline-id
"
`;

exports[`refactrctl list pipelines should work 1`] = `
"_id                       organization_id           project_id                name                          step_count  revision_count  created            
61ccc379d42b9b0f518365db  61cc93942529b6ec9681e4e2  61ccbe03d42b9bdcc88365d8  The Answer is Always Testing  1           3               12/29/2021, 8:22 PM
"
`;

exports[`refactrctl list pipelines should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"feature_tags\\": [],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:22:17.026Z\\",
        \\"modified\\": \\"2021-12-29T20:47:22.071Z\\",
        \\"step_count\\": 1,
        \\"revision_count\\": 3,
        \\"name\\": \\"The Answer is Always Testing\\",
        \\"summary\\": \\"Pipeline for dynamic CI tests.\\"
    }
]
"
`;

exports[`refactrctl list pipelines should work 3`] = `
"-
    _id: 61ccc379d42b9b0f518365db
    feature_tags: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:22:17.026Z'
    modified: '2021-12-29T20:47:22.071Z'
    step_count: 1
    revision_count: 3
    name: The Answer is Always Testing
    summary: Pipeline for dynamic CI tests.

"
`;

exports[`refactrctl list pipelines throws on missing arguments 1`] = `
"refactrctl list pipelines

List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the pipelines  [string] [required]
      --sort        Sort order  [choices: \\"modified_asc\\", \\"modified_desc\\", \\"name_asc\\", \\"name_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list projects should work 1`] = `
"_id                       name                                           pipeline_count  organization_id           created             
61ccbe03d42b9bdcc88365d8  CRUD Testing                                   1               61cc93942529b6ec9681e4e2  12/29/2021, 7:58 PM 
61cca573d42b9b46428365c8  The One With the Greetings                     1               61cc93942529b6ec9681e4e2  12/29/2021, 6:14 PM 
6010f6e2a830874a04689246  CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)  10              5f9f2d08e2f1bb2436e6f5b0  01/27/2021, 5:15 AM 
5f9f3b02233d0b9e290b3122  Scratch                                        57              5f9f2d08e2f1bb2436e6f5b0  11/01/2020, 10:47 PM
617711bbda9b615a36917ef2  Dan Testing                                    5               5f9f2d08e2f1bb2436e6f5b0  10/25/2021, 8:21 PM 
607f19bd98a5b821d3ca5f13  Runner Dog Food                                8               5f9f2d08e2f1bb2436e6f5b0  04/20/2021, 6:13 PM 
5fa4dba223b4e0703b95c465  Full Kitchen Sink                              41              5f9f2d08e2f1bb2436e6f5b0  11/06/2020, 5:14 AM 
5fda3431f00c8ba848f49f45  Vault Testing                                  5               5f9f2d08e2f1bb2436e6f5b0  12/16/2020, 4:22 PM 
60fb43f7ec3b3b4d95917316  Kitchen Sink Suite [ERDE-1203]                 35              5f9f2d08e2f1bb2436e6f5b0  07/23/2021, 10:34 PM
61660be4ec3b3bc1d991793c  William's Project                              1               5f9f2d08e2f1bb2436e6f5b0  10/12/2021, 10:27 PM
"
`;

exports[`refactrctl list projects should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:58:59.813Z\\",
        \\"modified\\": \\"2021-12-29T22:00:19.034Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"CRUD Testing\\"
    },
    {
        \\"_id\\": \\"61cca573d42b9b46428365c8\\",
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T18:14:11.872Z\\",
        \\"modified\\": \\"2021-12-29T19:26:50.603Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"The One With the Greetings\\"
    },
    {
        \\"_id\\": \\"6010f6e2a830874a04689246\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-01-27T05:15:14.584Z\\",
        \\"modified\\": \\"2021-12-29T15:53:21.296Z\\",
        \\"pipeline_count\\": 10,
        \\"name\\": \\"CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)\\"
    },
    {
        \\"_id\\": \\"5f9f3b02233d0b9e290b3122\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-01T22:47:30.770Z\\",
        \\"modified\\": \\"2021-12-29T15:11:51.696Z\\",
        \\"pipeline_count\\": 57,
        \\"name\\": \\"Scratch\\",
        \\"image_id\\": \\"600b6b5c25b0b52703ea3f0c\\"
    },
    {
        \\"_id\\": \\"617711bbda9b615a36917ef2\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-10-25T20:21:15.612Z\\",
        \\"modified\\": \\"2021-12-23T21:17:36.065Z\\",
        \\"pipeline_count\\": 5,
        \\"name\\": \\"Dan Testing\\",
        \\"icon_name\\": \\"pills\\"
    },
    {
        \\"_id\\": \\"607f19bd98a5b821d3ca5f13\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-04-20T18:13:17.407Z\\",
        \\"modified\\": \\"2021-12-17T19:20:27.247Z\\",
        \\"pipeline_count\\": 8,
        \\"name\\": \\"Runner Dog Food\\",
        \\"image_id\\": \\"607f19d896b0a463afd1ccb5\\"
    },
    {
        \\"_id\\": \\"5fa4dba223b4e0703b95c465\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-06T05:14:10.990Z\\",
        \\"modified\\": \\"2021-12-09T20:15:30.522Z\\",
        \\"pipeline_count\\": 41,
        \\"name\\": \\"Full Kitchen Sink\\",
        \\"image_id\\": \\"5feeecacb5297d642e1938da\\"
    },
    {
        \\"_id\\": \\"5fda3431f00c8ba848f49f45\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-12-16T16:22:09.374Z\\",
        \\"modified\\": \\"2021-12-01T19:53:07.890Z\\",
        \\"pipeline_count\\": 5,
        \\"name\\": \\"Vault Testing\\",
        \\"image_id\\": \\"5fda3442b486804ec421ce2e\\"
    },
    {
        \\"_id\\": \\"60fb43f7ec3b3b4d95917316\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-07-23T22:34:31.873Z\\",
        \\"modified\\": \\"2021-11-24T16:19:59.090Z\\",
        \\"pipeline_count\\": 35,
        \\"name\\": \\"Kitchen Sink Suite [ERDE-1203]\\"
    },
    {
        \\"_id\\": \\"61660be4ec3b3bc1d991793c\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-10-12T22:27:48.913Z\\",
        \\"modified\\": \\"2021-10-14T21:22:29.132Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"William's Project\\"
    }
]
"
`;

exports[`refactrctl list projects should work 3`] = `
"-
    _id: 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:58:59.813Z'
    modified: '2021-12-29T22:00:19.034Z'
    pipeline_count: 1
    name: CRUD Testing
-
    _id: 61cca573d42b9b46428365c8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T18:14:11.872Z'
    modified: '2021-12-29T19:26:50.603Z'
    pipeline_count: 1
    name: The One With the Greetings
-
    _id: 6010f6e2a830874a04689246
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-01-27T05:15:14.584Z'
    modified: '2021-12-29T15:53:21.296Z'
    pipeline_count: 10
    name: 'CLI tests [DYNAMIC] ( CREATE, UPDATE, DELETE)'
-
    _id: 5f9f3b02233d0b9e290b3122
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-01T22:47:30.770Z'
    modified: '2021-12-29T15:11:51.696Z'
    pipeline_count: 57
    name: Scratch
    image_id: 600b6b5c25b0b52703ea3f0c
-
    _id: 617711bbda9b615a36917ef2
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-10-25T20:21:15.612Z'
    modified: '2021-12-23T21:17:36.065Z'
    pipeline_count: 5
    name: Dan Testing
    icon_name: pills
-
    _id: 607f19bd98a5b821d3ca5f13
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-04-20T18:13:17.407Z'
    modified: '2021-12-17T19:20:27.247Z'
    pipeline_count: 8
    name: Runner Dog Food
    image_id: 607f19d896b0a463afd1ccb5
-
    _id: 5fa4dba223b4e0703b95c465
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-06T05:14:10.990Z'
    modified: '2021-12-09T20:15:30.522Z'
    pipeline_count: 41
    name: Full Kitchen Sink
    image_id: 5feeecacb5297d642e1938da
-
    _id: 5fda3431f00c8ba848f49f45
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-12-16T16:22:09.374Z'
    modified: '2021-12-01T19:53:07.890Z'
    pipeline_count: 5
    name: Vault Testing
    image_id: 5fda3442b486804ec421ce2e
-
    _id: 60fb43f7ec3b3b4d95917316
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-07-23T22:34:31.873Z'
    modified: '2021-11-24T16:19:59.090Z'
    pipeline_count: 35
    name: 'Kitchen Sink Suite [ERDE-1203]'
-
    _id: 61660be4ec3b3bc1d991793c
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-10-12T22:27:48.913Z'
    modified: '2021-10-14T21:22:29.132Z'
    pipeline_count: 1
    name: William's Project

"
`;

exports[`refactrctl list runners should work (by project) 1`] = `
"_id                       organization_id           name            host_type  machine_type  version  started  heartbeat  status   idle_since  stop_pending  created            
61ccb65bd42b9b66fa8365d2  61cc93942529b6ec9681e4e2  CI Test Runner  -          -             -        -        -          Running  -           -             12/29/2021, 7:26 PM
"
`;

exports[`refactrctl list runners should work (by project) 2`] = `
"[
    {
        \\"_id\\": \\"61ccb65bd42b9b66fa8365d2\\",
        \\"project_ids\\": [
            \\"61cca573d42b9b46428365c8\\",
            \\"61ccbe03d42b9bdcc88365d8\\"
        ],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:26:19.277Z\\",
        \\"name\\": \\"CI Test Runner\\",
        \\"type\\": \\"aws_vm_centos8\\",
        \\"hosted\\": true,
        \\"status\\": \\"Running\\",
        \\"idle\\": true,
        \\"agent_version\\": \\"1.105.16\\",
        \\"last_run\\": \\"2021-12-30T17:50:04.893Z\\"
    }
]
"
`;

exports[`refactrctl list runners should work (by project) 3`] = `
"-
    _id: 61ccb65bd42b9b66fa8365d2
    project_ids:
        - 61cca573d42b9b46428365c8
        - 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:26:19.277Z'
    name: CI Test Runner
    type: aws_vm_centos8
    hosted: true
    status: Running
    idle: true
    agent_version: 1.105.16
    last_run: '2021-12-30T17:50:04.893Z'

"
`;

exports[`refactrctl list runners throws on missing arguments 1`] = `
"refactrctl list runners

List runners for an organization or a project

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter           Filter output using JsonPath  [string]
      --address          Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token       Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help             Show help  [boolean]
      --project-id       ID of the project containing the runners  [string]
      --organization-id  ID of the organization containing the runners  [string]

Missing required argument: either organization-id or project-id
"
`;

exports[`refactrctl list runs throws on missing arguments 1`] = `
"refactrctl runs [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the organization containing the runs  [string] [required]
      --pipeline-id  ID of a pipeline used to filter the runs  [string]
      --job-id       ID of a job used to filter the runs  [string]
      --sort         Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list throws on missing subcommand 1`] = `
"Usage: refactrctl list <command> [options]

Commands:
  refactrctl list credentials         List credentials from a project
  refactrctl list projects            List projects from an organization
  refactrctl list organizations       List organizations to which authenticated user belongs
  refactrctl list jobs                List jobs for a project
  refactrctl list runs                List runs for a project
  refactrctl list pipeline-revisions  List pipeline revisions for a pipeline
  refactrctl list runners             List runners for an organization or a project
  refactrctl list pipelines           List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]

Command must be specified
"
`;
